<resources>
    <string name="app_name">CAparking</string>
    <string name="title_activity_maps">Map</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="school">School</string>
    <string name="market">Market</string>
    <string name="title_activity_view_direction">Map</string>
    <string name="view_direction">View Direction</string>
    <string name="show_on_map">Show On Map</string>
    <string name="open_now">Open Now :</string>
    <string name="place_address">Place Address</string>
    <string name="place_name">Place Name</string>
    <string name="purchase_history">Purchase History</string>
    <string name="purchase_amount">Amount</string>
    <string name="purchase_paid">Paid</string>
    <string name="purchase_location_date">Date</string>
    <string name="purchase_end_session">End Session</string>
    <string name="home_location">Location</string>
    <string name="prompt_return_date">Return Date</string>
    <string name="prompt_departure_date">Departure Date</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Full Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_credit_card">CredidCart</string>
    <string name="channel_name">Car Parking</string>
    <string name="channel_id">car_parking</string>
    <string name="something_went_wrong">Something went wrong. /n Check your network connection.</string>
</resources>