<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customborder"
    tools:context=".ViewPlaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_image_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/places_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/places_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_address"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/places_open_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_now"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="5"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnShowMap"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/show_on_map"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/btnViewDirection"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/view_direction"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="italic"
                app:cornerRadius="8dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#7FC1F6">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/pAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textColor="#000000"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/seatSelect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="#0692D1"
                            android:onClick="parkingSlot"
                            android:text="More Informatıon"
                            android:textSize="12sp"
                            tools:ignore="TouchTargetSizeCheck" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="30dp"
                            android:text="Per Hour From"
                            android:textColor="#000000" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="0dp"
                            android:layout_marginBottom="0dp"
                            android:layout_weight="1"
                            android:text="1.7 $"
                            android:textColor="#000000"
                            android:textSize="16sp" />


                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>